8.ingress/example/httpproxy-multiple-paths.yaml
# httpproxy-multiple-paths.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: multiple-paths
  namespace: default
spec:
  virtualhost:
    fqdn: multi-path.example.com
  routes:
    - conditions:
      - prefix: / # matches everything else
      services:
        - name: nginx-blue
          port: 80
    - conditions:
      - prefix: /green
      services:
        - name: nginx-green
          port: 80
