8.ingress/example/httpproxy-name.yaml
# httpproxy-name.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: name-example-blue
  namespace: default
spec:
  virtualhost:
    fqdn: blue.httpproxy.example.com
  routes:
    - services:
      - name: nginx-blue
        port: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: name-example-green
  namespace: default
spec:
  virtualhost:
    fqdn: green.httpproxy.example.com
  routes:
    - services:
        - name: nginx-green
          port: 80
