8.ingress/example/httpproxy-weight-shfiting.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: weight-shifting
  namespace: default
spec:
  virtualhost:
    fqdn: weights.example.com
  routes:
    - services:
        - name: nginx-blue
          port: 80
          weight: 10
        - name: nginx-green
          port: 80
          weight: 90
