8.ingress/example/ingress-name.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: name-example
spec:
  rules:
  - host: blue.ingress.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-blue
          servicePort: 80
  - host: green.ingress.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-green
          servicePort: 80
